--- a/package.json
+++ b/package.json
@@ -1,14 +1,30 @@
 {
   "name": "mooc-ui",
   "version": "0.1.0",
-  "private": true,
+  "description": "慕课网演示组件库",
+  "main": "dist/index.umd.js",
+  "keywords": [
+    "mooc-ui",
+    "vue",
+    "ui"
+  ],
+  "author": "校长",
+  "files": [
+    "dist",
+    "components"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "npm run build:js && npm run build:css",
+    "lint": "vue-cli-service lint",
+    "build:js": "webpack --config ./webpack.component.js",
+    "build:css": "npx gulp sass",
+    "docs:dev":"vuepress dev docs",
+    "docs:build":"vuepress build docs"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "node-sass": "^4.14.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -18,7 +34,15 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "gulp": "^4.0.2",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-sass": "^5.0.0",
+    "sass": "^1.43.4",
+    "sass-loader": "^7.3.1",
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.11",
+    "vuepress": "^1.8.2",
+    "webpack-cli": "^4.9.1"
   },
   "eslintConfig": {
     "root": true,
